--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>DuoBass Records Website</title>
+      <link rel="icon" type="image/x-icon" href="/favicon.ico">
       <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         // MIT License
