--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>DuoBass Records Website</title>
-      <link rel="icon" type="image/x-icon" href="/favicon.ico">
+      <title>DuoBass Records</title>
+      
+      <!-- Favicon -->
+      <link rel="icon" type="image/x-icon" href="/build/assets/70b011ab5daef8d07bbe86fd809e477b8cd2ed65-dW9Y2bOI.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+      <link rel="manifest" href="/site.webmanifest">
+      <meta name="theme-color" content="#ffffff">
+      
       <script type="text/javascript">
         // Single Page Apps for GitHub Pages
         // MIT License
