Fix GitHub Pages deployment for duobassrecords repository

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
       <title>DuoBass Records</title>
       
       <!-- Favicon -->
-      <link rel="icon" type="image/x-icon" href="/build/assets/70b011ab5daef8d07bbe86fd809e477b8cd2ed65-dW9Y2bOI.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-      <link rel="manifest" href="/site.webmanifest">
+      <link rel="icon" type="image/x-icon" href="favicon.ico">
+      <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+      <link rel="manifest" href="site.webmanifest" crossorigin="use-credentials">
       <meta name="theme-color" content="#ffffff">
       
       <script type="text/javascript">
