--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
       <title>DuoBass Records</title>
       
       <!-- Favicon -->
-      <link rel="icon" type="image/x-icon" href="favicon.ico">
-      <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-      <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-      <link rel="manifest" href="site.webmanifest" crossorigin="use-credentials">
-      <meta name="theme-color" content="#ffffff">
+      <link rel="icon" type="image/x-icon" href="/duobassrecords/favicon.ico">
+      <meta name="theme-color" content="#000000">
       
       <script type="text/javascript">
         // Single Page Apps for GitHub Pages
