--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
       <title>DuoBass Records</title>
       
       <!-- Favicon -->
-      <link rel="icon" type="image/x-icon" href="./favicon.ico">
-      <meta name="theme-color" content="#000000">
+      <link rel="icon" type="image/x-icon" href="favicon.ico">
+      <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+      <link rel="manifest" href="site.webmanifest" crossorigin="use-credentials">
+      <meta name="theme-color" content="#ffffff">
       
       <script type="text/javascript">
         // Single Page Apps for GitHub Pages
@@ -32,11 +36,12 @@
           }
         }(window.location))
       </script>
+      <script type="module" crossorigin src="/duobassrecords/assets/index.CxWQ6Wo2.js"></script>
+      <link rel="stylesheet" crossorigin href="/duobassrecords/assets/index.DaBXpLQT.css">
     </head>
 
     <body>
       <div id="root"></div>
-      <script type="module" src="/src/main.tsx"></script>
     </body>
   </html>
   
