--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <title>DuoBass Records</title>
       
       <!-- Favicon -->
-      <link rel="icon" type="image/x-icon" href="/duobassrecords/favicon.ico">
+      <link rel="icon" type="image/x-icon" href="/favicon.ico">
       <meta name="theme-color" content="#000000">
       
       <script type="text/javascript">
